syntax="proto3";

import "common.proto";

package cutchin_cash.user;

option java_package = "cutchin_cash.models.user";
option java_multiple_files = true;


message GetUserRequest {
    string userId = 1;
}
message GetUserResponse {
    cutchin_cash.common.User user = 1;
}


message GetAllUsersResponse {
    repeated cutchin_cash.common.PrivateUser users = 1;
}


message AddFundsRequest {
    cutchin_cash.common.Money amount = 1;
}
message AddFundsResponse {
    cutchin_cash.common.User user = 1;
}


service UserService {
    rpc AddFunds(AddFundsRequest) returns (AddFundsResponse) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc GetAllUsers(cutchin_cash.common.Empty) returns (GetAllUsersResponse) {}
}